<resources>
    <string name="app_name">닮은동물찾기</string>


    <string name="cutepig">
               \n\n당신과 닮은 동물: 기니피그\n\n
        주변 사람들은 당신을
        따뜻한 사람이라 생각하며
        당신을 좋아하는 사람이
        대부분이에요 하지만 쉽게
        마음에 상처가 납니다.
        당신을 이용하려는 사람을
        조심하세요
    </string>
    <string name="noru">
               \n\n당신과 닮은 동물: 노루\n\n
        당신은 일 처리를 꼼꼼히 하며
        조심성이 강합니다. 주변에 있는
        것을 세심하게 살필 줄 알며 강한 모습만
        보이길 좋아합니다. 누군가와
        친하게 지내는데, 시간이 걸립니다.
        친한 친구보고 도와달라고 하세요
    </string>

    <string name="cat">
        \n\n당신과 닮은 동물: 고양이\n\n
        당신은 독립성이 있고 자존심이 세며
        고독합니다. 무리생활을 좋아하는
        편은 아니며 무리생활을 하면 매너를
        잘 아는 사람입니다. 당신은 예민한
        편에 속하기에 섬세한 사람과 잘
        어울릴 것입니다.
    </string>

    <string name="giraffe">
               \n\n당신과 닮은 동물: 기린\n\n
        시야가 넓은 당신은 일이
        어떻게 돌아가고 있는지 전체
        적인 맥락을 잘 잡아냅니다.
        당신은 쉽게 상처받지 않으며
        싸움에 재능이 있습니다.
    </string>
    <string name="shark">
            \n\n당신과 닮은 동물: 상어\n\n
        당신은 어떠한 환경에서도
        친화력이 뛰어나 잘 적응하며
        당신은 영리함을 타고났기에
        고정관념에 구에 받지 않습니다.
        엄청난 포스를 타고난 당신은
        원치 않게 누군가 당신을 두려워
        하게 만듭니다.
    </string>

    <string name="phieonix">
            \n\n당신과 닮은 동물: 불사조\n\n
        당신의 잠재력은 엄청나지만
        단련하지 않으면 평생 빛을 보지
        못할 수도 있습니다. 당신은 도전
        할수록 더욱더 성장하며 극한의
        도전은 당신을 더욱 강하게
        만듭니다. 어떠한 고통이 찾아와도
        당신을 강하게 만들 뿐입니다.
    </string>


</resources>
